--- a/BiddingPro/.classpath
+++ b/BiddingPro/.classpath
@@ -19,9 +19,9 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Unnati/Downloads/apache-tomcat-8.5.6/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tejamukka/workspace_neon/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
